# AppLimiter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  applimiter.sh  install.sh  pyproject.toml
src/applimiter/: cli.py  constants.py  daemon.py  main.py  notification_manager.py  process_handler.py  utils.py
src/applimiter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_notification_manager.py  test_process_handler.py  test_utils.py
