[project]
name = "applimiter"
version = "0.1.0"
description = "Your personal application usage manager."
requires-python = ">=3.12"
dependencies = [
    "psutil>=7.0.0",
]
scripts = { applimiter = "applimiter.main:main" }
[tool.setuptools]

package-dir = {"" = "src"}

[tool.pytest.ini_options]

pythonpath = [
    "src"
]